--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
 
 form {
  text-align: center;
+ height: 100px;
 }
 
 .input {
@@ -21,4 +22,11 @@ form {
 	width: 50px;
 	height: 30px;
 	margin-top: 400px;
+	position: relative;
+}
+
+.box{
+	width:100px;
+	height:100px;
+	color: blue;
 }
