--- a/css/main.css
+++ b/css/main.css
@@ -4,4 +4,14 @@ h1 {
 	font-size: 80px;
 }
 
+.letter {
+	display: inline-block;
+	list-style: none;
+	width: 20px;
+	margin: 0 5px;
+	border-bottom: 1px solid black;
+	text-align: center;
+	color: white;
+}
+
 
