--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,25 @@ h1 {
 	opacity: 0;
 	transition: opacity 1s ease;
 }
+.correct {
+	background-color: green;
+	transition: all 1s ease;
+}
+
+.error {
+    color: red;
+    opacity: 1;
+}
+.warning {
+    color: orange;
+    opacity: 1;
+}
+.win {
+    color: green;
+    opacity: 1;
+}
+
+.lose {
+	color: red;
+	opacity: 1;
+}
